# ai-collab-docs

./: .gitignore  AUDIT_REPORT.md  Makefile  README.md  docker-compose.yml  mvp-demo-report.html
.ga/: AI_SESSION.md  directory.md  ga.md
contracts/: README.md  __init__.py  _auto_enums.py  _auto_models.py  contracts.py  gen_contracts.py  gen_ts_types.py  identity.py  llm_io.py  roles_and_permissions.py  state_machine.py  ws_protocol.py  yjs_schema.py
deploy/: Makefile  docker-compose.yml
designs/: design_report.md  model_repo.yaml  openapi.yml  prd.md
docker/: backend.Dockerfile  yjs-server.Dockerfile
docs/: prd.md
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py
services/api/src/: main.py
services/api/src/ai_forge/: llm_client.py  mock_data.py  models.py  router.py  service.py
services/api/src/approval/: models.py  router.py  service.py
services/api/src/audit/: models.py  router.py  service.py
services/api/src/auth/: deps.py  models.py  router.py  service.py
services/api/src/collab/: router.py  ws_gateway.py
services/api/src/document/: models.py  router.py  service.py
services/api/src/shared/: __init__.py  authz.py  config.py  database.py  middleware.py  redis_client.py
services/api/src/state_engine/: __init__.py  engine.py
services/api/tests/: conftest.py  locustfile.py  test_approval.py  test_audit.py  test_auth.py  test_auth_members.py  test_authz.py  test_authz_full.py  test_collab.py  test_document.py  test_forge.py  test_middleware.py  ws_test.py
(+64 files in other folders)
